--- a/bower.json
+++ b/bower.json
@@ -2,10 +2,7 @@
   "name": "zeroclipboard",
   "description": "The ZeroClipboard library provides an easy way to copy text to the clipboard using an invisible Adobe Flash movie and a JavaScript interface.",
   "version": "2.2.0",
-  "main": [
-    "dist/ZeroClipboard.js",
-    "dist/ZeroClipboard.swf"
-  ],
+  "main": "dist/ZeroClipboard.js",
   "keywords": [
     "flash",
     "clipboard",
